LanguageTheory/TP_2/exercise_4/grammar_1/parser.output
   0  $accept : %entry% $end

   1  sp : s EOF

   2  s : u v A

   3  u : A

   4  v : w
   5    | B

   6  w :

   7  %entry% : '\001' sp

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . sp  (7)

	A  shift 3
	.  error

	sp  goto 4
	s  goto 5
	u  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	u : A .  (3)

	.  reduce 3


state 4
	%entry% : '\001' sp .  (7)

	.  reduce 7


state 5
	sp : s . EOF  (1)

	EOF  shift 7
	.  error


state 6
	s : u . v A  (2)
	w : .  (6)

	B  shift 8
	A  reduce 6

	v  goto 9
	w  goto 10


state 7
	sp : s EOF .  (1)

	.  reduce 1


state 8
	v : B .  (5)

	.  reduce 5


state 9
	s : u v . A  (2)

	A  shift 11
	.  error


state 10
	v : w .  (4)

	.  reduce 4


state 11
	s : u v A .  (2)

	.  reduce 2


6 terminals, 7 nonterminals
8 grammar rules, 12 states
